force-app/main/default/objects/sugati__Supplier_Cost__c/sugati__Supplier_Cost__c.object-meta.xml
<CustomObject>
    <description>Supplier Cost</description>
    <label>Supplier Cost</label>
    <nameField>
        <displayFormat>SBC-{0000000000}</displayFormat>
        <label>Supplier Cost ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Costs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>