force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__Is_Dummy__c.field-meta.xml
<CustomField>
    <fullName>sugati__Is_Dummy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Dummy</label>
    <type>Checkbox</type>
</CustomField>