force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>sugati__OpportunityId__c</fullName>
    <formula>CASESAFEID(sugati__SC_Supplier_Booking__r.sugati__SB_Opportunity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OpportunityId</label>
    <type>Text</type>
</CustomField>