force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__S_SC_Agent_Commission_Due__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SC_Agent_Commission_Due__c</fullName>
    <description>If Agent Commission Override on Individual Booking Detail has a value use that figure to sum up. If no value or 0 use Agent Commission Amount.</description>
    <label>Agent Commission Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>