force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__S_SC_Agent_Commission_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SC_Agent_Commission_Type__c</fullName>
    <description>Select whether the agent commission is calculated in percentage or value</description>
    <inlineHelpText>Select whether the agent commission is calculated in percentage or value</inlineHelpText>
    <label>Agent Commission Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>