force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__S_SC_Cancellation_Charges_Booking__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SC_Cancellation_Charges_Booking__c</fullName>
    <description>Sum of all Cancellation Amount in Booking Currency on child IBDs.</description>
    <label>Cancellation Charges (Booking Currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>