force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__S_SC_Costing_Breakdown_Level__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SC_Costing_Breakdown_Level__c</fullName>
    <description>Copied from parent Supplier Booking.</description>
    <formula>TEXT(sugati__SC_Supplier_Booking__r.sugati__S_SB_Costing_Breakdown_Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costing Breakdown Level</label>
    <type>Text</type>
</CustomField>