force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__S_SC_Gross_Cost_Supplier_Currency__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SC_Gross_Cost_Supplier_Currency__c</fullName>
    <description>Rolls up S_IBD_Individual_Gross_Cost_Supplier__c from child Individual Booking Detail records.</description>
    <label>Gross Cost (Supplier Currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>