force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__S_SC_Gross_Sell_Price_PP_Supplier_Curr__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SC_Gross_Sell_Price_PP_Supplier_Curr__c</fullName>
    <label>Gross Sell Price PP (Supplier Currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>