force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__S_SC_Margin_after_Agency_Comm_Booking__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SC_Margin_after_Agency_Comm_Booking__c</fullName>
    <formula>sugati__S_SC_Profit_Agency_Commission_Booking__c / (sugati__S_SC_Gross_Sell_Price_Booking_Currency__c - sugati__S_SC_Agent_Commission_Due__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin after Agency Commission (Booking)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>