force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__S_SC_Margin_Booking_Currency__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SC_Margin_Booking_Currency__c</fullName>
    <formula>sugati__S_SC_Profit_Booking_Currency__c /  sugati__S_SC_Gross_Sell_Price_Booking_Currency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin (Booking Currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>