force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__S_SC_Net_Cost_Booking_Currency__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SC_Net_Cost_Booking_Currency__c</fullName>
    <description>Rolls up all S_IBD_Individual_Net_Cost_Booking__c values from child Individual Booking Detail records.</description>
    <label>Net Cost (Booking Currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>