force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__S_SC_Note__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SC_Note__c</fullName>
    <description>using for discount note</description>
    <label>Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>