force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__S_SC_Profit_Agency_Commission_Booking__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SC_Profit_Agency_Commission_Booking__c</fullName>
    <description>Rolls up all S_ISD_Profit_After_Agency_Com_Booking__c values from child Individual Booking Detail records.</description>
    <label>Profit - Agency Commission (Booking)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>