force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__S_SC_Profit_Supplier_Currency__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SC_Profit_Supplier_Currency__c</fullName>
    <description>Rolls up all S_IBD_Profit_Supplier_Currency__c values from child Individual Booking Detail records.</description>
    <label>Profit (Supplier Currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>