force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__S_SC_Supplier_Commission_Booking_Curr__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SC_Supplier_Commission_Booking_Curr__c</fullName>
    <label>Supplier Commission (Booking Currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>