force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__S_SC_Supplier_Commission_Supplier_Curr__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SC_Supplier_Commission_Supplier_Curr__c</fullName>
    <description>Rolls up all S_IBD_Supplier_Commission_Amount__c values from child Individual Booking Detail records.</description>
    <label>Supplier Commission (Supplier Currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>