force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Adjustment__c</fullName>
    <formula>IF(OR(DATEVALUE(CreatedDate)&gt; sugati__SC_Supplier_Booking__r.sugati__SB_Opportunity__r.sugati__O_Return_Date__c, 
DATEVALUE( LastModifiedDate )&gt; sugati__SC_Supplier_Booking__r.sugati__SB_Opportunity__r.sugati__O_Return_Date__c 
), &quot;Adjustment&quot;, &quot;NA&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjustment</label>
    <type>Text</type>
</CustomField>