force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_Agency_Commission_VAT_Amount_Booking__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Agency_Commission_VAT_Amount_Booking__c</fullName>
    <label>Agency Commission VAT Amount (Booking)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>