force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_Agent_Commission_Value_SC__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Agent_Commission_Value_SC__c</fullName>
    <label>Agent Commission Value SC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>