force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_Client_Group__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Client_Group__c</fullName>
    <label>Client Group</label>
    <referenceTo>sugati__Client_Group__c</referenceTo>
    <relationshipLabel>Supplier Costs</relationshipLabel>
    <relationshipName>Supplier_Costs</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>