force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_Commission_Income_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Commission_Income_Type__c</fullName>
    <label>Commission Income Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Net</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>