force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_Commission_Notes__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Commission_Notes__c</fullName>
    <label>Commission Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>