force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_Commission_Out__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Commission_Out__c</fullName>
    <formula>IF(sugati__SC_Supplier_Booking__r.RecordType.Name = &quot;Commission Out&quot;, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Out?</label>
    <type>Checkbox</type>
</CustomField>