force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_Commission_Value__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Commission_Value__c</fullName>
    <label>Commission Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>