force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_CommissionP__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_CommissionP__c</fullName>
    <label>Commission %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>