force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_Costing_Source__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Costing_Source__c</fullName>
    <inlineHelpText>The information which is used to determine the source of cost. Whether it was manually created or created from the Load Rates button.</inlineHelpText>
    <label>Costing Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
                <default>true</default>
                <label>Manual</label>
            </value>
            <value>
                <fullName>Load Rates</fullName>
            </value>
            <value>
                <fullName>Room Search</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>