force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_Costing_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Costing_Type__c</fullName>
    <formula>TEXT(sugati__SC_Supplier_Booking__r.sugati__SB_Costing_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costing Type</label>
    <type>Text</type>
</CustomField>