force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_Deposite_Rule__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Deposite_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deposite Rule</label>
    <referenceTo>sugati__Rule__c</referenceTo>
    <relationshipLabel>Supplier Costs</relationshipLabel>
    <relationshipName>Supplier_Costs</relationshipName>
    <type>Lookup</type>
</CustomField>