force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_Description__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>