force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_Exclude_From_RSP_F__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Exclude_From_RSP_F__c</fullName>
    <formula>sugati__SC_Supplier_Booking__r.sugati__SB_Exclude_From_RSP__c</formula>
    <label>Exclude From RSP F</label>
    <type>Checkbox</type>
</CustomField>