force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_Is_Dummy__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Is_Dummy__c</fullName>
    <formula>sugati__SC_Client_Group__r.sugati__CG_Is_Dummy__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Dummy</label>
    <type>Checkbox</type>
</CustomField>