force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_Is_Flight_Cost__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Is_Flight_Cost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Flight Cost</label>
    <type>Checkbox</type>
</CustomField>