force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_Is_Service_Toms_Applicable__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Is_Service_Toms_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Service Toms Applicable?</label>
    <type>Checkbox</type>
</CustomField>