force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_Item_Category__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Item_Category__c</fullName>
    <label>Item Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gross Cost</fullName>
            </value>
            <value>
                <fullName>Past Passenger Discount</fullName>
            </value>
            <value>
                <fullName>Early Payment Plan</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>Special Offer</fullName>
            </value>
            <value>
                <fullName>Variable Cost</fullName>
            </value>
            <value>
                <fullName>Fixed Cost</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>