force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_Linked_Services_Extra_Item__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Linked_Services_Extra_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SC Linked Services Extra Item</label>
    <referenceTo>sugati__Linked_Services_Extra_Item__c</referenceTo>
    <relationshipLabel>Supplier Costs</relationshipLabel>
    <relationshipName>Supplier_Costs</relationshipName>
    <type>Lookup</type>
</CustomField>