force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_Locked__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>To lock all the fields for this record.</inlineHelpText>
    <label>Locked</label>
    <type>Checkbox</type>
</CustomField>