force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_Margin_in_Supplier_Cost_Currency__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Margin_in_Supplier_Cost_Currency__c</fullName>
    <label>Margin in Supplier Cost Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>