force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_Margin_Lookup__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Margin_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Margin Lookup</label>
    <referenceTo>sugati__Margin__c</referenceTo>
    <relationshipLabel>Supplier Costs</relationshipLabel>
    <relationshipName>Supplier_Costs</relationshipName>
    <type>Lookup</type>
</CustomField>