force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_Margin_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Margin_Type__c</fullName>
    <label>Margin Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Percentage</fullName>
                <default>true</default>
                <label>Percentage</label>
            </value>
            <value>
                <fullName>Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>