force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_Margin_Value__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Margin_Value__c</fullName>
    <label>Margin Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>