force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_MarkUp_Cost_for_Selling_Price__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_MarkUp_Cost_for_Selling_Price__c</fullName>
    <label>Mark-Up Cost for Selling Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>