force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_Nights__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Nights__c</fullName>
    <label>Nights</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>