force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_Occupancy_From__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Occupancy_From__c</fullName>
    <label>Occupancy From</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>