force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_Occupancy_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Occupancy_Type__c</fullName>
    <label>Occupancy Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adult</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Infant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>