force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_Option__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Option__c</fullName>
    <label>Option</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>