force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_Outstanding_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Outstanding_Payment_Amount__c</fullName>
    <formula>sugati__SC_Supplier_Cost_Payment__r.sugati__SCP_Outstanding_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>