force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_Selected__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Selected</label>
    <type>Checkbox</type>
</CustomField>