force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_Sell_Price_Excluding_Agent_Commission__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Sell_Price_Excluding_Agent_Commission__c</fullName>
    <formula>sugati__SC_MarkUp_Cost_for_Selling_Price__c -  sugati__SC_Agent_Commission_Value_SC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Showing the sell price (in selling currency) excluding the agent commission</inlineHelpText>
    <label>Sell Price (Excluding Agent Commission)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>